
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_3__ TYPE_1__ ;


typedef int uchar ;
struct TYPE_3__ {long nnew; long nold; int addr; int * old; int * new; struct TYPE_3__* next; } ;
typedef TYPE_1__ Kfunc ;


 int Anew ;
 int False ;
 int True ;
 int envfd ;
 int envpath ;
 int err (char*,int ) ;
 TYPE_1__* kf ;
 int msg (char*,long,char*,int ) ;
 long pwrite (int ,int *,long,int ) ;

__attribute__((used)) static int
kwrite(int obj)
{
 Kfunc * k;
 uchar * p;
 long b;
 long n;

 for(k = kf; k; k = k->next)
 {
  if(obj == Anew)
  {
   p = k->new;
   b = k->nnew;
  }
  else
  {
   p = k->old;
   b = k->nold;
  }

  msg(
   "writing %d %s bytes to %lluX",
   b,
   obj == Anew ? "new" : "old",
   k->addr);

  n = pwrite(envfd, p, b, k->addr);
  if(n != b)
  {
   err("failed to write to \"%s\": %r", envpath);
   return False;
  }
 }

 return True;
}
